<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/server_host" />

        <EditText
            android:id="@+id/server_host"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/server_port"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:gravity="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioGroup android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_male"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="11dp"
                android:text="@string/male_button" />

            <RadioButton android:id="@+id/radio_female"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="11dp"
                android:text="@string/female_button" />

        </RadioGroup>




    </LinearLayout>


    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            ></Button>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            ></Button>



    </LinearLayout>

</LinearLayout>

